Refactor/annotation scanner to composition (#483)
* refactor(core): change AbstractMethodLevelListenerScanner to MethodLevelAnnotationChannelsScanner

The MethodLevelAnnotationChannelsScanner uses composition instead of polymorphism

* refactor(kafka): use MethodLevelAnnotationChannelsScanner

The MethodLevelAnnotationChannelsScanner uses composition instead of polymorphism

* refactor(jms): use MethodLevelAnnotationChannelsScanner

The MethodLevelAnnotationChannelsScanner uses composition instead of polymorphism

* refactor(sqs): use MethodLevelAnnotationChannelsScanner

The MethodLevelAnnotationChannelsScanner uses composition instead of polymorphism

* refactor(core): remove unused AbstractMethodLevelListenerScanner

* refactor(core): extract AnnotationUtil

* refactor: replace AbstractClassLevelListenerScanner with ClassLevelAnnotationChannelsScanner

Prefer composition to polymorphism

* refactor: rename to MinimalIntegrationTestContextConfiguration

* chore: cleanup

* chore: cleanup

* refactor: use AnnotationUtil in AsyncAnnotationScanners

* fix: use AnnotationUtil in AsyncAnnotationScanners

* refactor(core): rename BindingBuilder to BindingFactory

---------

Co-authored-by: David Müller <d4ve.mone@googlemail.com>